<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arnela.meetsarajevoib140265.LoginActivity">

    <!-->

    -->
    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text=" meetSarajevo"
        android:textColor="#FFFFFF"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtLogo"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/LoginEmail"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"

        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEmail"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingBottom="8dp"
        android:text="john@gmail.com"
        android:textColor="#FFFFFF"
        android:textCursorDrawable="@null"
        tools:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtLozinka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtEmail"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/LoginLozinka"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtLozinka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtLozinka"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingBottom="8dp"
        android:text="testtest"
        android:textColor="#FFFFFF"
        android:textCursorDrawable="@null"
        tools:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtLozinka"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:height="36dp"
        android:background="@drawable/btn_shape"
        android:padding="8dp"
        android:text="@string/LoginSignin"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtRegistracija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLogo"
        android:layout_alignStart="@+id/txtLogo"
        android:layout_below="@+id/btnLogin"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"

        android:text="@string/LoginNeregistrovan"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btnRegistracija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtRegistracija"
        android:layout_below="@+id/btnLogin"
        android:layout_centerInParent="true"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/txtRegistracija"
        android:layout_toRightOf="@+id/txtRegistracija"
        android:clickable="true"
        android:linksClickable="true"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/LoginRegistrujSe"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>


